...
  Widget _buildProgressIndicator() {
    return Container(
      padding: const EdgeInsets.symmetric(vertical: 25),
      child: Row(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          _buildStepCircle(0, "Personal"),
          _buildStepLine(0),
          _buildStepCircle(1, "Docs"),
          _buildStepLine(1),
          _buildStepCircle(2, "Bank/Job"),
        ],
      ),
...
